--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,19 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{ title }} is working!</h1>
-{% for obj in object_list %}
-/posts/id/
-{% url "posts:detail" id=obj.id %}
-<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/>
-{{ obj.content }}<br/>
-{{ obj.timestamp }}<br/>
-{{ obj.updated }}<br/>
-{{ obj.id }}<br/>
+<div class="col-sm-8 col-sm-offset-2">
+    <h1>{{ title }}</h1>
+    <div class="row">
+        {% for obj in object_list %}
+        <div class="col-sm-6">
+            <div class="thumbnail">
+                <!--<img src="..." alt="...">-->
+                <div class="caption">
+                    <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
+                        <small>{{ obj.timestamp }}</small>
+                    </h3>
+                    <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                </div>
+            </div>
+        </div>
 
-{% endfor %}
-
-
+        {% cycle "" "<div class='col-sm-12'><hr></div></div><div class='row'>" %}
+        {% endfor %}
+    </div>
+</div>
 
 
 {% endblock content %}
