--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -3,24 +3,23 @@
 
 <div class="col-sm-8 col-sm-offset-2">
     <h1>{{ title }}</h1>
-    <div class="row">
         {% for obj in object_list %}
-        <div class="col-sm-6">
-            <div class="thumbnail">
-                <!--<img src="..." alt="...">-->
-                <div class="caption">
-                    <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
-                        <small>{{ obj.timestamp }}</small>
-                    </h3>
-                    <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="thumbnail">
+                    <!--<img src="..." alt="...">-->
+                    <div class="caption">
+                        <h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a>
+                            <small>{{ obj.timestamp|timesince }} ago</small>
+                        </h3>
+                        <p>{{ obj.content|linebreaks|truncatechars:120 }}</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        {% cycle "" "<div class='col-sm-12'><hr></div></div><div class='row'>" %}
+        </div>
         {% endfor %}
-    </div>
 </div>
 
 
